# SimpleITKUtilities

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  publish.yml
SimpleITK/extra/: __init__.py  make_isotropic.py  slice_by_slice.py
SimpleITK/utilities/: Logger.py  __init__.py  dask.py  fft.py  histogram_equalization.py  make_isotropic.py  overlay_bounding_boxes.py  pyside.py  resize.py  resize_and_scale.py  slice_by_slice.py  tf.py  vtk.py
docs/source/: api.rst  conf.py  index.rst
test/: conftest.py  test_dask.py  test_pyside.py  test_tf.py  test_utilities.py  test_vtk.py
